--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:demo_UDQL2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="850" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Icon="./Images/holy-gate.png">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="168*"/>
+            <ColumnDefinition Width="257*"/>
+        </Grid.ColumnDefinitions>
 
     </Grid>
 </Window>
